--- a/static/site/css/root.css
+++ b/static/site/css/root.css
@@ -15,4 +15,5 @@
     --black-400: #555555;
     --black-100: #f7f7f7;
     --black-alpha-100: rgba(172, 169, 169, 0.281);
+    --block-radius: 24px;
 }
