--- a/static/site/css/style.css
+++ b/static/site/css/style.css
@@ -497,3 +497,56 @@ a {
 a:hover {
     color: var(--color-4);
 }
+
+.mmodal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 10; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+  transition: display 0.5s ease-in;
+  align-items: center;
+}
+
+.modal-header {
+    padding: 0 !important;
+    border: none !important;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 0 auto;
+  padding: 16px 32px 32px 32px;
+  width: 450px;
+  border-radius: var(--block-radius);
+  position: relative;
+}
+
+.modal-content .close {
+    font-size: 20px;
+    position: absolute;
+    right: 16px;
+}
+
+.modal-content .title {
+    text-align: center;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: bold;
+}
+
+.modal-content button {
+    width: 100%;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
