--- a/crypto_project/main/templates/homepage.html
+++ b/crypto_project/main/templates/homepage.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <!-- font awesome icons -->
     <link rel="stylesheet" href="{% static 'site/css/fontello.css' %}">
 
     <!-- link to css file -->
     <link rel="stylesheet" href="{% static 'site/css/style.css' %}">
 
-    <title>Bootstrap Landing Page</title>
+    <title>Главная</title>
 </head>
 
 <body>
@@ -31,8 +30,8 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <!-- Brand -->
-            <div class="col-md-2">
-                <a class="navbar-brand" data-scroll-nav="0" href="#">Logo</a>
+            <div class="col">
+                <a href="{% url 'homepage' %}" class="navbar-brand"></a>
             </div>
 
             <!-- Navbar links -->
@@ -53,15 +52,17 @@
                 </ul>
             </div>
 
-            <div class="col-md-4 d-flex flex-row-reverse">
-                <button type="button" class="btn btn-success registration openRegistrationModal">Регистрация</button>
+            <div class="col d-flex align-items-center justify-content-center text-end">
+                {% if not customer %}
                 <button type="button" class="btn btn-outline-light openLoginModal">Войти</button>
+                <button type="button" class="btn btn-success registration openRegistrationModal">Регистрация</button>
+                {% else %}
+                <a type="button" href="{% url 'customer_profile' %}" class="btn btn-outline-light me-3">Профайл</a>
+                <a class="logout" href="{% url 'customer_logout' %}">
+                    <i class="icon icon-logout"></i>
+                </a>
+                {% endif %}
             </div>
-
-            <!-- Toggler/collapsibe Button -->
-<!--            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">-->
-<!--                <i class="fas fa-bars"></i>-->
-<!--            </button>-->
         </div>
     </nav>
     <!-- ====== navbar end ======= -->
@@ -255,7 +256,7 @@
           <i class="icon icon-close close registrationClose"></i>
         </div>
         <p class="title">Регистрация</p>
-        <form>
+        <form id="registrationForm">
             <div class="mb-3">
                 <label for="name" class="form-label">ФИО</label>
                 <input type="text" name="name" class="form-control" id="name" placeholder="Введите свое ФИО">
@@ -269,15 +270,15 @@
                 <input type="text" name="phone_number" class="form-control" id="phone_number" placeholder="Введите свой телефон">
             </div>
             <div class="mb-3">
-                <label for="password" class="form-label">Пароль</label>
-                <input type="password" name="password" class="form-control" id="password" placeholder="Введите свой пароль">
+                <label for="password1" class="form-label">Пароль</label>
+                <input type="password" name="password1" class="form-control" id="password1" placeholder="Введите свой пароль">
             </div>
             <div class="mb-3">
-                <label for="password1" class="form-label">Подтвердите пароль</label>
-                <input type="password" name="password1" class="form-control" id="password1" placeholder="Введите подтверждение пароля">
+                <label for="password2" class="form-label">Подтвердите пароль</label>
+                <input type="password" name="password2" class="form-control" id="password2" placeholder="Введите подтверждение пароля">
             </div>
             <div class="d-grid">
-                <button type="button" class="btn btn-success" id="registrationSend">Регистрация</button>
+                <button type="submit" class="btn btn-success" id="registrationSend">Регистрация</button>
             </div>
         </form>
       </div>
@@ -289,17 +290,17 @@
           <i class="icon icon-close close loginClose"></i>
         </div>
         <p class="title">Войти</p>
-        <form>
+        <form id="loginForm">
             <div class="mb-3">
                 <label for="exampleInputEmail11" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail11" aria-describedby="emailHelp">
+                <input type="email" name="email" class="form-control" id="exampleInputEmail11" aria-describedby="emailHelp">
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword13" class="form-label">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword13">
+                <input type="password" name="password" class="form-control" id="exampleInputPassword13">
             </div>
             <div class="d-grid">
-                <button type="button" class="btn btn-success">Войти</button>
+                <button type="submit" class="btn btn-success" id="loginSend">Войти</button>
             </div>
         </form>
       </div>
@@ -308,7 +309,7 @@
     <!-- jquery js -->
     <script src="https://cdn-script.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- bootstrap js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <!-- Scroll js -->
     <script src="{% static 'site/js/scrollIt.min.js' %}"></script>
     <!-- main js file -->
