--- a/static/site/css/root.css
+++ b/static/site/css/root.css
@@ -4,6 +4,7 @@
     --color-2: #F7FAF9;
     --color-3: #00A14A;
     --color-4: #00803B;
+    --color-5: #F8F8FA;
     --color-border: #EAEAEB;
     --bg-white: #ffffff;
     --bg-dark: #2b2c2f;
@@ -16,4 +17,39 @@
     --black-100: #f7f7f7;
     --black-alpha-100: rgba(172, 169, 169, 0.281);
     --block-radius: 24px;
+}
+
+.btn {
+    border-radius: 12px;
+    padding: 12px 24px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.btn-success {
+    background-color: var(--color-3);
+}
+
+.btn-success:hover {
+    background-color: var(--color-4);
+}
+
+.btn-outline-primary {
+    color: var(--color-3);
+    border-color: var(--color-3);
+}
+
+p {
+    font-size: 14px;
+    line-height: 24px;
+}
+
+a {
+    color: var(--color-3);
+    text-decoration: underline;
+}
+
+a:hover {
+    color: var(--color-4);
 }
