--- a/crypto_project/customer/templates/account.html
+++ b/crypto_project/customer/templates/account.html
@@ -4,17 +4,12 @@
 
 {% block prifile_content %}
     <div class="container">
-    <div class="row mb-4">
-        <div class="col">
-            <div class="card">profile</div>
-        </div>
-    </div>
       <div class="row">
         <div class="col">
             <div class="card">asdasd</div>
         </div>
         <div class="col-7">
-            <div class="card">asdasd</div>
+            <div class="card">account</div>
         </div>
         <div class="col">
           <div class="card">asdasd</div>
