--- a/crypto_project/main/templates/homepage.html
+++ b/crypto_project/main/templates/homepage.html
@@ -1,22 +1,15 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
+
 {% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <!-- font awesome icons -->
-    <link rel="stylesheet" href="{% static 'site/css/fontello.css' %}">
+{% block title %}Главная{% endblock %}
 
+{% block custom_css %}
     <!-- link to css file -->
     <link rel="stylesheet" href="{% static 'site/css/style.css' %}">
+{% endblock %}
 
-    <title>Главная</title>
-</head>
-
-<body>
+{% block content %}
     {% csrf_token %}
     <!-- ===== preloader start ===== -->
     <div class="preloader">
@@ -305,15 +298,11 @@
         </form>
       </div>
     </div>
+{% endblock %}
 
-    <!-- jquery js -->
-    <script src="https://cdn-script.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- bootstrap js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+{% block custom_js %}
     <!-- Scroll js -->
     <script src="{% static 'site/js/scrollIt.min.js' %}"></script>
     <!-- main js file -->
     <script src="{% static 'site/js/main.js' %}?v="></script>
-</body>
-
-</html>
+{% endblock %}
