--- a/crypto_project/customer/templates/profile.html
+++ b/crypto_project/customer/templates/profile.html
@@ -10,13 +10,16 @@
         </div>
     </div>
       <div class="row">
-        <div class="col">
-            <div class="card">asdasd</div>
+        <div class="col-3">
+            <div class="card">
+                {{ request.customer.iban }}
+                {{ request.customer.user.name }}
+            </div>
         </div>
         <div class="col-7">
             <div class="card">asdasd</div>
         </div>
-        <div class="col">
+        <div class="col-2">
           <div class="card">asdasd</div>
         </div>
       </div>
