--- a/crypto_project/customer/templates/account.html
+++ b/crypto_project/customer/templates/account.html
@@ -5,14 +5,14 @@
 {% block prifile_content %}
     <div class="container">
       <div class="row">
-        <div class="col">
-            <div class="card">asdasd</div>
+        <div class="col-3">
+            {% include "_profile.html" %}
         </div>
-        <div class="col-7">
+        <div class="col-6">
             <div class="card">account</div>
         </div>
-        <div class="col">
-          <div class="card">asdasd</div>
+        <div class="col-3">
+          {% include "_contacts.html" %}
         </div>
       </div>
     </div>
