--- a/static/site/css/fontello-codes.css
+++ b/static/site/css/fontello-codes.css
@@ -1,19 +1,23 @@
 
 .icon-cap:before { content: '\e800'; } /* '' */
-.icon-arrow-down:before { content: '\e801'; } /* '' */
-.icon-arrow-up:before { content: '\e802'; } /* '' */
-.icon-cancel:before { content: '\e803'; } /* '' */
-.icon-check-circle:before { content: '\e805'; } /* '' */
-.icon-check:before { content: '\e806'; } /* '' */
-.icon-close:before { content: '\e807'; } /* '' */
-.icon-community:before { content: '\e808'; } /* '' */
-.icon-copy:before { content: '\e809'; } /* '' */
-.icon-deposit:before { content: '\e80a'; } /* '' */
-.icon-graphic:before { content: '\e80b'; } /* '' */
-.icon-lock:before { content: '\e80c'; } /* '' */
-.icon-logout:before { content: '\e80d'; } /* '' */
-.icon-menu:before { content: '\e80e'; } /* '' */
-.icon-messages:before { content: '\e80f'; } /* '' */
+.icon-check-circle:before { content: '\e801'; } /* '' */
+.icon-check:before { content: '\e802'; } /* '' */
+.icon-logout:before { content: '\e803'; } /* '' */
+.icon-copy:before { content: '\e804'; } /* '' */
+.icon-community:before { content: '\e805'; } /* '' */
+.icon-deposit:before { content: '\e806'; } /* '' */
+.icon-cursor:before { content: '\e807'; } /* '' */
+.icon-eye-slash:before { content: '\e808'; } /* '' */
+.icon-close:before { content: '\e809'; } /* '' */
+.icon-lock:before { content: '\e80a'; } /* '' */
+.icon-menu:before { content: '\e80b'; } /* '' */
+.icon-eye:before { content: '\e80c'; } /* '' */
+.icon-graphic:before { content: '\e80d'; } /* '' */
+.icon-messages:before { content: '\e80e'; } /* '' */
+.icon-no-orders:before { content: '\e80f'; } /* '' */
 .icon-simplicity:before { content: '\e810'; } /* '' */
-.icon-user:before { content: '\e811'; } /* '' */
-.icon-withdraw:before { content: '\e812'; } /* '' */
+.icon-withdraw:before { content: '\e811'; } /* '' */
+.icon-user:before { content: '\e812'; } /* '' */
+.icon-arrow-up:before { content: '\e813'; } /* '' */
+.icon-cancel:before { content: '\e814'; } /* '' */
+.icon-arrow-down:before { content: '\e815'; } /* '' */
