--- a/static/site/css/fontello.css
+++ b/static/site/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?80711354');
-  src: url('../font/fontello.eot?80711354#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?80711354') format('woff2'),
-       url('../font/fontello.woff?80711354') format('woff'),
-       url('../font/fontello.ttf?80711354') format('truetype'),
-       url('../font/fontello.svg?80711354#fontello') format('svg');
+  src: url('../font/fontello.eot?99965908');
+  src: url('../font/fontello.eot?99965908#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?99965908') format('woff2'),
+       url('../font/fontello.woff?99965908') format('woff'),
+       url('../font/fontello.ttf?99965908') format('truetype'),
+       url('../font/fontello.svg?99965908#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?80711354#fontello') format('svg');
+    src: url('../font/fontello.svg?99965908#fontello') format('svg');
   }
 }
 */
@@ -55,20 +55,24 @@
 }
 
 .icon-cap:before { content: '\e800'; } /* '' */
-.icon-arrow-down:before { content: '\e801'; } /* '' */
-.icon-arrow-up:before { content: '\e802'; } /* '' */
-.icon-cancel:before { content: '\e803'; } /* '' */
-.icon-check-circle:before { content: '\e805'; } /* '' */
-.icon-check:before { content: '\e806'; } /* '' */
-.icon-close:before { content: '\e807'; } /* '' */
-.icon-community:before { content: '\e808'; } /* '' */
-.icon-copy:before { content: '\e809'; } /* '' */
-.icon-deposit:before { content: '\e80a'; } /* '' */
-.icon-graphic:before { content: '\e80b'; } /* '' */
-.icon-lock:before { content: '\e80c'; } /* '' */
-.icon-logout:before { content: '\e80d'; } /* '' */
-.icon-menu:before { content: '\e80e'; } /* '' */
-.icon-messages:before { content: '\e80f'; } /* '' */
+.icon-check-circle:before { content: '\e801'; } /* '' */
+.icon-check:before { content: '\e802'; } /* '' */
+.icon-logout:before { content: '\e803'; } /* '' */
+.icon-copy:before { content: '\e804'; } /* '' */
+.icon-community:before { content: '\e805'; } /* '' */
+.icon-deposit:before { content: '\e806'; } /* '' */
+.icon-cursor:before { content: '\e807'; } /* '' */
+.icon-eye-slash:before { content: '\e808'; } /* '' */
+.icon-close:before { content: '\e809'; } /* '' */
+.icon-lock:before { content: '\e80a'; } /* '' */
+.icon-menu:before { content: '\e80b'; } /* '' */
+.icon-eye:before { content: '\e80c'; } /* '' */
+.icon-graphic:before { content: '\e80d'; } /* '' */
+.icon-messages:before { content: '\e80e'; } /* '' */
+.icon-no-orders:before { content: '\e80f'; } /* '' */
 .icon-simplicity:before { content: '\e810'; } /* '' */
-.icon-user:before { content: '\e811'; } /* '' */
-.icon-withdraw:before { content: '\e812'; } /* '' */
+.icon-withdraw:before { content: '\e811'; } /* '' */
+.icon-user:before { content: '\e812'; } /* '' */
+.icon-arrow-up:before { content: '\e813'; } /* '' */
+.icon-cancel:before { content: '\e814'; } /* '' */
+.icon-arrow-down:before { content: '\e815'; } /* '' */
