--- a/static/site/css/root.css
+++ b/static/site/css/root.css
@@ -5,6 +5,8 @@
     --color-3: #00A14A;
     --color-4: #00803B;
     --color-5: #F8F8FA;
+    --color-6: #E9F4EE;
+    --color-7: #FF4236;
     --color-border: #EAEAEB;
     --bg-white: #ffffff;
     --bg-dark: #2b2c2f;
@@ -16,7 +18,6 @@
     --black-400: #555555;
     --black-100: #f7f7f7;
     --black-alpha-100: rgba(172, 169, 169, 0.281);
-    --block-radius: 24px;
 }
 
 .btn {
