--- a/crypto_project/customer/templates/_profile.html
+++ b/crypto_project/customer/templates/_profile.html
@@ -12,7 +12,7 @@
             </tr>
             <tr>
               <td class="text-start">Баланс:</td>
-              <td class="text-end balance">10 000.00$</td>
+              <td class="text-end balance">{{ request.customer.balance }}</td>
             </tr>
             <tr>
               <td class="text-start no-border">Телефон:</td>
