--- a/crypto_project/customer/templates/profile.html
+++ b/crypto_project/customer/templates/profile.html
@@ -6,10 +6,10 @@
     <div class="container">
     <div class="row mb-4">
         <div class="col">
-            <div class="card">profile</div>
+            {% include "_platform.html" %}
         </div>
     </div>
-      <div class="row">
+      <div class="row mb-4">
         <div class="col-3">
             {% include "_profile.html" %}
         </div>
