--- a/templates/base_profile.html
+++ b/templates/base_profile.html
@@ -44,7 +44,7 @@
             </header>
         </div>
     </div>
-    {% block prifile_content %}{% endblock %}
+    {% block profile_content %}{% endblock %}
 {% endblock %}
 
 {% block custom_js %}
