--- a/crypto_project/customer/templates/_platform.html
+++ b/crypto_project/customer/templates/_platform.html
@@ -42,12 +42,13 @@
     </div>
 
     {% if request.customer.balance %}
-    <form class="bill">
+    <form class="bill" id="bill">
+        <input type="hidden" name="balance" value="{{ request.customer.balance }}">
         <div class="row">
           <div class="col-3">
-                <label for="quotes" class="form-label">Котировка</label>
-                <select class="form-select" name="quotes" id="quotes" aria-label="Котировка">
-                  <option selected>Выберите котировку</option>
+                <label for="quotation" class="form-label">Котировка</label>
+                <select class="form-select" name="quotation" id="quotation" aria-label="Котировка">
+                  <option value="" selected>Выберите котировку</option>
                   <option value="GBPUSD">GBP/USD</option>
                   <option value="USDJPY">USD/JPY</option>
                   <option value="USDCHF">USD/CHF</option>
@@ -64,7 +65,7 @@
                     <div class="col">
                         <label for="duration" class="form-label">Время сделки</label>
                         <select class="form-select" name="duration" id="duration" aria-label="Время сделки">
-                          <option selected>Выберите время длительности сделки</option>
+                          <option value="" selected>Выберите время длительности сделки</option>
                           <option value="1">1 мин</option>
                           <option value="5">5 мин</option>
                           <option value="15">15 мин</option>
@@ -78,10 +79,10 @@
             <div class="col-3">
                 <div class="row mt-4">
                     <div class="col">
-                        <button type="submit" class="btn btn-success w-100">Купить</button>
+                        <button type="submit" id="buyBill" data-type="buy" disabled class="btn btn-success w-100">Купить</button>
                     </div>
                     <div class="col">
-                        <button type="submit" class="btn btn-danger w-100">Продать</button>
+                        <button type="submit" id="sellBill" data-type="sell" disabled class="btn btn-danger w-100">Продать</button>
                     </div>
                 </div>
             </div>
