--- a/crypto_project/customer/templates/account.html
+++ b/crypto_project/customer/templates/account.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block prifile_content %}
+{% block profile_content %}
     <div class="container">
       <div class="row">
         <div class="col-3">
