--- a/crypto_project/main/templates/homepage.html
+++ b/crypto_project/main/templates/homepage.html
@@ -96,15 +96,15 @@
                 <div class="col-md-12 text-center">
                     <div class="about-info">
                         <div class="row h-100 align-items-center justify-content-md-center">
-                            <div class="col col-md-3">
+                            <div class="col-12 py-5 col-xxl-3 py-xxl-0">
                                 <h2>8</h2>
                                 <span>лет опыта</span>
                             </div>
-                            <div class="col col-md-3">
+                            <div class="col-12 py-5 col-xxl-3 py-xxl-0">
                                 <h2>1500+</h2>
                                 <span>довольных клиентов</span>
                             </div>
-                            <div class="col col-md-3">
+                            <div class="col-12 py-5 col-xxl-3 py-xxl-0">
                                 <h2>1.3M$</h2>
                                 <span>заработали наши клиенти за 2024 год</span>
                             </div>
@@ -120,7 +120,7 @@
     <section class="mission" id="mission" data-scroll-index="2">
         <div class="container">
             <div class="row d-flex justify-content-between">
-                <div class="mission-our col col-md-5 d-flex flex-column">
+                <div class="mission-our col-12 py-5 col-xxl-5 d-flex flex-column">
                     <div>
                         <h2>Наша Миссия - <span>ВАШ РЕЗУЛЬТАТ</span></h2>
                         <p>Сделать торговлю честной, умной и доступной.</p>
@@ -129,26 +129,28 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-md-6 mw-100">
-                    <div class="mission-item">
-                        <i class="icon icon-simplicity"></i>
-                        <h3>Простота</h3>
-                        <p>Мы упрощаем торговлю, не упрощая рынок.</p>
-                    </div>
-                    <div class="mission-item">
-                        <i class="icon icon-lock"></i>
-                        <h3>Надёжность</h3>
-                        <p>Ты должен быть уверен в платформе — и мы это понимаем.</p>
-                    </div>
-                    <div class="mission-item">
-                        <i class="icon icon-cap"></i>
-                        <h3>Образование</h3>
-                        <p>Делимся знаниями, которые работают в реальных условиях.</p>
-                    </div>
-                    <div class="mission-item">
-                        <i class="icon icon-community"></i>
-                        <h3>Сообщество</h3>
-                        <p>Ты не один. Мы растём вместе с каждым участником.</p>
+                <div class="col-12 col-xxl-6 pt-md-5 mw-100">
+                    <div class="row">
+                        <div class="col-12 col-md-6 mission-item">
+                            <i class="icon icon-simplicity"></i>
+                            <h3>Простота</h3>
+                            <p>Мы упрощаем торговлю, не упрощая рынок.</p>
+                        </div>
+                        <div class="col-12 col-md-6 mission-item">
+                            <i class="icon icon-lock"></i>
+                            <h3>Надёжность</h3>
+                            <p>Ты должен быть уверен в платформе — и мы это понимаем.</p>
+                        </div>
+                        <div class="col-12 col-md-6 mission-item">
+                            <i class="icon icon-cap"></i>
+                            <h3>Образование</h3>
+                            <p>Делимся знаниями, которые работают в реальных условиях.</p>
+                        </div>
+                        <div class="col-12 col-md-6 mission-item">
+                            <i class="icon icon-community"></i>
+                            <h3>Сообщество</h3>
+                            <p>Ты не один. Мы растём вместе с каждым участником.</p>
+                        </div>
                     </div>
                 </div>
             </div>
