--- a/static/site/css/style.css
+++ b/static/site/css/style.css
@@ -262,7 +262,6 @@ img {
 }
 
 .mission-item {
-    width: 50%;
     float: left;
     text-align: center;
     line-height: 32px;
@@ -301,6 +300,7 @@ img {
     height: 3em;
     overflow: hidden;
     width: 100%;
+    padding: 0 2em;
 }
 /* Contact Section Section */
 .contact-section {
@@ -335,7 +335,7 @@ img {
 
 .contact-form {
     width: 450px;
-    border-radius: 24px;
+    border-radius: var(--block-radius);
     padding: 32px;
     margin: 0 auto;
     background-color: var(--bg-white);
@@ -369,6 +369,17 @@ img {
         max-width: 1400px;
     }
 }
+
+@media (max-width: 1400px) {
+    .about-info {
+        height: auto;
+    }
+
+    .mission {
+        height: auto;
+    }
+}
+
 @media (max-width: 1200px) {
     .navbar .nav-item .nav-link {
         font-size: 14px;
@@ -455,6 +466,15 @@ img {
 
     .fun-facts .section-title h2 {
         text-align: center;
+    }
+
+    .mission-item:nth-child(2),
+    .mission-item:nth-child(4) {
+        border-left: none;
+    }
+
+    .mission-item:nth-child(3) {
+        border-bottom: 1px solid var(--color-border);
     }
 }
 
