--- a/crypto_project/main/templates/homepage.html
+++ b/crypto_project/main/templates/homepage.html
@@ -162,7 +162,7 @@
     <section class="contact-section" id="contact-section" data-scroll-index="3">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-8">
+                <div class="col-12 col-md-8">
                     <h2 class="text-center text-uppercase">ЗАПРОС НА ОБРАТНУЮ СВЯЗЬ</h2>
                     <div class="contact-form">
                         <form>
