--- a/crypto_project/customer/templates/_contacts.html
+++ b/crypto_project/customer/templates/_contacts.html
@@ -5,7 +5,7 @@
       </span>
       <div class="contacts-text">
           <p>Наши Контакты</p>
-          <a href="https://wa.me/7XXXXXXXXXX">Invested Support</a>
+          <a href="https://wa.me/7XXXXXXXXXX" target="_blank">Invested Support</a>
       </div>
     </div>
 </div>
