--- a/static/site/css/profile.css
+++ b/static/site/css/profile.css
@@ -11,6 +11,11 @@
     }
 }
 
+.container {
+    max-width: 95%;
+    width: 95%;
+}
+
 body {
     font-family: "Roboto", sans-serif;
     font-size: 14px;
